2013-01-07  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-parse-errors):
	Fix typo.  (Bug#13369)

2013-01-07  Vitalie Spinu  <spinuvit@gmail.com>  (tiny change)

	* comint.el (comint-send-input): Check size of buffer before
	waiting for process output, in case already accepted.  (Bug#13290)

2013-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-set-file-uid-gid): UID and GID must be
	non-negative integers.  Otherwise, the default values are used.
	(tramp-convert-file-attributes): Convert uid and gid to integers.

2013-01-03  Glenn Morris  <rgm@gnu.org>

	* term.el (term-handle-colors-array): Ensure face attributes
	are fully specified, not nil.  (Bug#13337)

	* term.el (term-default-fg-color, term-default-bg-color):
	Fix custom type.

	* progmodes/etags.el (tags-compression-info-list): Doc fix.
	(tag-find-file-of-tag-noselect): Check auto-compression-mode
	rather than 'jka-compr being loaded.  (Bug#13338)

	* subr.el (eval-after-load): Don't purecopy the form, so that it
	can be nconc'd later on; reverts 2009-11-11 change.  (Bug#13331)

	* emacs-lisp/byte-run.el (defun): Place cl declarations
	after any interactive spec.  (Bug#13265)

2012-12-31  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/byte-run.el (defmacro): Use same argument parsing as
	defun.  Don't check for DECL if DOCSTRING isn't a string.
	(defun): Likewise.

2012-12-31  Glenn Morris  <rgm@gnu.org>

	* eshell/em-cmpl.el (eshell-pcomplete):
	More thoroughly imitate pcomplete.  (Bug#13293)

	* files.el (parse-colon-path): Doc fix.  (Bug#12351)
	Return nil for empty path elements.  (Bug#13296)

2012-12-31  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-nav-end-of-statement): Rewrite in
	order to improve efficiency (Based on Daniel Colascione's
	<dancol@dancol.org> patch).  (Bug#13182)

2012-12-31  Glenn Morris  <rgm@gnu.org>

	* vc/log-edit.el (log-edit-header-contents-regexp): Add doc string.
